# feast_repo

./: pyproject.toml  test.ipynb
feature_repo/: example_repo.py  feature_repo.py  feature_store.yaml  posts_preprocessing.py  workflow.py
feature_repo/data/: driver_stats.parquet  new_posts.parquet  posts.csv  registry.db
